Wed Jun 13 14:18:22 2001  Steve Huston  <shuston@riverace.com>

        * ACE-INSTALL.html: Modified the platforms/compilers section to
          reflect the new roles of DOC, Riverace, OCI. Fixed up the
          Solaris section a bit.

Wed Jun 13 11:08:26 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/Thread_Pool_Test.cpp: Casted message block pointers to
	  ACE_TCHAR* to compile with UNICODE on.

Wed Jun 13 10:22:10 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Svc_Conf_l.cpp: Need to read the sizeof (ACE_TCHAR) of bytes
	  to handle UNICODE svc.conf correctly.

	* ace/Svc_Conf.h: Changed the macro ACE_YY_INPUT to handle
	  ACE_TCHAR instead of char.  Thanks to Allen Kelly
	  <akelly@postx.com> for sending the patches.

	* ace/Obstack_T.{h,i,cpp}: Templatized ACE_Obstack on the char
	  type it handles.

	* ace/Obchunk.{h,i,cpp}: New files containing the non-template
	  class ACE_Obchunk.

	* ace/Obstack.{h,cpp}: All the class definitions were moved to
	  Obchunk.* and Obstack_T.*.  These files typedef'ed
	  ACE_Obstack_T<char> to ACE_Obstack for backward compatibility.

	* ace/Obstack.i: Removed file.

	* ace/ace_dll.dsp:
	* ace/ace_lib.dsp:
	* ace/Makefile: Added Obchunk and Obstack_T.

	* ace/Service_Config.cpp:
	* ace/Svc_Conf_y.cpp:
	* ace/Svc_Conf.h: Changed ACE_Obstack to ACE_Obstack_T<ACE_TCHAR>
	  to handle UNICODE files when needed.

	* ace/Configuration.cpp (set_string_value): When storing wchar
	  strings, the datasize passed to RegSetValueEx is the total size
	  in bytes, not the string length.

Wed Jun 13 08:42:31 2001  Christopher Kohlhoff  <chris@kohlhoff.com>

        * include/makeinclude/ace_flags.bor:
          Added support for new RTCORBA libraries.

        * include/makeinclude/build_lib.bor:
          Suppress noisy warnings when creating a static library.

        * tests/Makefile.bor:
          Added Thread_Pool_Reactor_Resume_Test.

Tue Jun 12 21:22:19 2001  Ossama Othman  <ossama@uci.edu>

	* bin/nightlybuilds/builds.lst:
